--- a/dhcpd.conf
+++ b/dhcpd.conf
@@ -1,1 +1,16 @@
-option domain-name "gt.local"
+#option domain-name "";
+option domain-name-servers 8.8.8.8, 1.1.1.1;
+
+default-lease-time 600;
+max-lease-time 7200;
+
+authoritative;
+
+subnet 192.168.0.0 netmask 255.255.255.0 {
+  range 192.168.0.50 192.168.0.80;
+  option broadcast-address 192.168.0.255;
+  option routers 192.168.0.10;
+}
+
+
+#arp -a | awk '{print "host "$1" {\n\t\thardware ethernet "$4";\n" "\t\tfixed address "$2";\n}"}' | tr -d '()' >> /etc/dhcp/dhcpd.conf- simple host-Liste anhängen
